--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.applicationcuatoi">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -9,8 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ApplicationCuaToi">
-        <activity android:name=".view.signup.SignUpActivity"/>
-        <activity android:name=".view.home.HomeActivity" />
+        <activity
+            android:name=".view.home.HomeActivity"
+            android:label="@string/title_activity_home"></activity>
+        <activity android:name=".view.signup.SignUpActivity" />
         <activity android:name=".view.login.LoginActivity" />
         <activity
             android:name=".view.SplashActivity"
