--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,12 @@ android {
 
 dependencies {
 
+    //motion layout
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+
+    implementation 'com.facebook.android:facebook-login:8.1.0'
+
+
     //livedata MVVM
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.0"
     implementation "androidx.lifecycle:lifecycle-livedata:2.3.0"
