--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -36,7 +37,6 @@ dependencies {
 
     implementation 'com.facebook.android:facebook-login:8.1.0'
 
-
     //livedata MVVM
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.3.0"
     implementation "androidx.lifecycle:lifecycle-livedata:2.3.0"
@@ -56,6 +56,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
