--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ android {
 
 dependencies {
 
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
     //motion layout
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
