--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,10 @@ android {
 
 dependencies {
 
+    //rxAndroid
+    implementation "io.reactivex.rxjava2:rxjava:2.2.16"
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
     //motion layout
